--- a/JobApplicationTracker.Web/Views/_ViewImports.cshtml
+++ b/JobApplicationTracker.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using JobApplicationTracker.Web
-@using JobApplicationTracker.Web.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
