--- a/JobApplicationTracker.Web/wwwroot/css/site.css
+++ b/JobApplicationTracker.Web/wwwroot/css/site.css
@@ -16,3 +16,51 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.welcome-div {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 60px);
+    text-align: center;
+}
+
+.welcome-div h1 {
+    font-weight: bold;
+    color: blue;
+}
+
+.welcome-div h3 {
+    font-style: italic;
+}
+
+.styled-link {
+    color: coral;
+    text-decoration: none;
+    position: relative;
+    display: inline-block;
+}
+
+.styled-link:hover {
+    color: crimson;
+}
+
+.styled-link::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: -3px;
+    left: 0;
+    background: linear-gradient(to right, aqua, transparent);
+    transition: transform 0.25s ease-out;
+    transform: scaleX(0);
+    transform-origin: bottom left;
+}
+
+.styled-link:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom right;
+}
