--- a/JobApplicationTracker.Web/Views/_ViewImports.cshtml
+++ b/JobApplicationTracker.Web/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using JobApplicationTracker.Application.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
