--- a/JobApplicationTracker.Web/Views/_ViewImports.cshtml
+++ b/JobApplicationTracker.Web/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@using JobApplicationTracker.Application.ViewModels
+﻿@using System.Linq
+@using JobApplicationTracker.Application.Models
+@using JobApplicationTracker.Application.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
