--- a/JobApplicationTracker.Web/wwwroot/css/site.css
+++ b/JobApplicationTracker.Web/wwwroot/css/site.css
@@ -76,7 +76,7 @@ body {
 
 .application-div th, td {
     padding: 15px;
-    text-align: left;
+    text-align: center;
 }
 
 .application-div th {
