--- a/JobApplicationTracker.Web/wwwroot/css/site.css
+++ b/JobApplicationTracker.Web/wwwroot/css/site.css
@@ -86,3 +86,17 @@ body {
 .application-div tr:nth-child(even) {
     background-color: #f9f9f9;
 }
+
+.error-message {
+    color: brown;
+}
+
+.success-flush-message {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
