--- a/JobApplicationTracker.Web/Views/JobApplication/List.cshtml
+++ b/JobApplicationTracker.Web/Views/JobApplication/List.cshtml
@@ -36,7 +36,14 @@
                         <td>@item.Position</td>
                         <td>@item.Status</td>
                         <td>@item.AppliedAt</td>
-                        <td><a asp-action="Detail" asp-controller="JobApplication" asp-route-id="@item.Id">View</a></td>
+                        <td>
+                            <a asp-action="Detail" asp-controller="JobApplication" asp-route-id="@item.Id">View</a>
+
+                            <form asp-action="Remove" asp-controller="JobApplication" asp-route-id="@item.Id" method="post">
+                                <input type="submit" name="Remove" value="Remove" />
+                            </form>
+
+                        </td>
                     </tr>
                 }
             }
