--- a/JobApplicationTracker.Web/Views/JobApplication/List.cshtml
+++ b/JobApplicationTracker.Web/Views/JobApplication/List.cshtml
@@ -24,7 +24,8 @@
             @if (!Model.Any())
             {
                 <tr>
-                    <td colspan="5">No job applications available.</td>
+                    <td colspan="4">No job applications available.</td>
+                    <td><a asp-action="Create" asp-controller="JobApplication">Add</a></td>
                 </tr>
             }
             else
